--- a/src/popup/picker.html
+++ b/src/popup/picker.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>sort tabs picker</title>
+	<title>FrequencyWeave tabs picker</title>
 	<link rel="stylesheet" href="picker.css">
 	<script src="sortabs.js"></script>
 	</head>
